[POST] Update 2020-12-17-post.md

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: home
 		<img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
 	  </div>
 	  <h3><strong>조정민(Jeongmin, Cho)</strong></h3>
-	  <h3>Dankook univ.(2016~)</h3>
-	  <h3>안녕하세요.</h3>
-	  <h3>개발자를 꿈꾸는 조정민의 블로그에 오신 것을 환영합니다.</h3>
+	  <h4><strong>Dankook univ.(2016~)</strong></h4>
+
+	  <h3 style="font-style: italic">"Welcome to Jeong-min's blog, dreaming of becoming a developer."</h3>
 	  {% include social.html %}
 	</div>
 </section>
