--- a/posts.html
+++ b/posts.html
@@ -5,10 +5,20 @@ title: Blog
 
 <div class="container">
 <h3>Posts</h3>
+{% for tag in site.data.tags %}
+	<span class="tag" onmouseover="" data-tag="{{tag}}">
+		{{ site.data.format[tag] }}
+	</span>
+{% endfor %}
   <div class="panel panel-default">
     <div class="panel-body">
 		{% for post in site.posts %}
-			<div class="row">
+			<div class="row"
+			{% if post.tags %}
+				{% for tag in post.tags %}
+				  data-{{ tag }}
+				{% endfor %}
+		  	{% endif %}>
 				 <div class="col-sm-4 col-md-4 col-lg-4">
 					 <h5 style="text-align: right">
 					 	{{ post.date | date: "%B %e, %Y" }}
@@ -24,3 +34,4 @@ title: Blog
 	</div>
   </div>
 </div>
+
